# cicada-engine

./: .gitignore  Cargo.toml  README.md
crates/core/cicada-core/: Cargo.toml
crates/core/cicada-window/: Cargo.toml
crates/core/cicada-window/examples/: basic-window.rs  event_loop.rs
crates/core/cicada-window/src/: error.rs  event.rs  event_loop.rs  lib.rs  monitor.rs  util.rs  window.rs
crates/core/cicada-window/src/backend/: mod.rs
crates/core/cicada-window/src/backend/windows/: error.rs  event.rs  event_loop.rs  mod.rs  monitor.rs  util.rs  window.rs
crates/core/cicada-window/src/platform/: windows.rs
crates/core/cicada-window/tests/: event_loop_multiple_lifetimes.rs  event_loop_validity.rs
crates/graphics/cicada-vulkan/: Cargo.toml
crates/graphics/cicada-vulkan/src/vk/: consts.rs  enums.rs  mod.rs  structs.rs
crates/tools/gen-vulkan/: Cargo.toml
crates/tools/gen-vulkan/src/: emit.rs  error.rs  lib.rs  load.rs  loader.rs  main.rs  parse.rs  repr.rs  trans.rs
