[package]
name = "cicada-window"
version = "0.1.0"
authors = ["Ahrraman <ahraman.programming@gmail.com>"]
description = """Crate for windowing functionality in Cicada."""
edition = "2021"
rust-version = "1.81.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_System",
    "Win32_System_LibraryLoader",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
]
