[package]
name = "cicada-vkgen"
version = "0.1.0"
authors = ["Ahraman <ahraman.programming@gmail.com>"]
description = """Generate Vulkan bindings for Rust."""
edition = "2021"
rust-version = "1.81.0"

[dependencies]
quick-xml = "0.36.2"

ureq = { version = "2.10.1", default-features = false, features = ["tls"] }
